@startuml Diag Componentes 

component view
component controller
component model 

view ..> controller
controller ..> model

@enduml

@startuml disenyo
allow_mixing
top to bottom direction
package view{

    component View <<FXML file>>

    component ViewController <<java>>
}

package controller{
    component MercaDAWController <<java>>

}

package model{

    package bbdd{
        component Database <<java>>

        interface MercaDAO{
            + crearTabla(TipoTabla tipo)
            + insertar(Empleado empleado)
            + insertar(Producto producto)
            + insertar(Compra compra)
            + actualizar(Empleado empleado)
            + actualizar(Producto producto)
            + borrar(Empleado empleado)
            + borrar(Producto producto)
            + visualizarProducto():Producto
            + visualizarProductos():List<Producto>
            + visualizarClientes():List<Cliente>
            + visualizarEmpleados():List<Empleado>
            + visualizarCompras():List<Compra>
            + visualizarStock():Map<Producto producto, int numero>
        }

        MercaDAO <|.. Database 
    }

    package util{
        package reader{
            component Reader <<java>>
            interface Lector {
                + leer(Fichero): List<Empleado>
                + leer(String): List<Empleado>
            }
        }
        package input{
            component Input <<java>>
            interface Fichero {
                + leer(): byte[]
                + escribir(byte[])
            }
        } 
        
        package export{
            component Export <<java>>
            interface Exportable {
                + exportar(String extension)
            }
        }

        Exportable <|.. Export
        Lector <|.. Reader  
        Fichero <|.. Input  

    }

    

    package exception{
        component MercaDAWException <<java>>
    }

    package entity{
        interface IMercaDAW{
            + obtenerPrecioVenta()
            + calcularNomina()
            
        }

        component MercaDAW <<java>>

        IMercaDAW <|.. MercaDAW
    }
}

    ViewController ..> View: use

    ViewController ..> MercaDAWController: use

    MercaDAWController ..> Exportable: use
    MercaDAWController ..> MercaDAO: use
    MercaDAWController ..> Lector: use
    MercaDAWController ..> Fichero: use
    MercaDAWController ..> MercaDAWException: use
    MercaDAWController ..> IMercaDAW: use
@enduml